Added 5 daysweather api and rendered on the dom

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,6 @@
       </section>
       <section class="weather-update-container">
         <div class="current-weather">
-          <h4>Current-weather</h4>
           <span id="city">Dehradun</span><span id="country">IN</span>
           <div>
             <img
@@ -91,6 +90,56 @@
               <h5>pressure</h5>
               <span id="pressure"> 73%</span>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="week-update">
+        <div class="week-update-container">
+          <div class="card">
+            <img src="../assets/sunny.png" alt="" />
+            <h4 class="temp">24 ℃</h4>
+            <h3 class="one about-weather">Mostly Sunny</h3>
+            <p class="desc">Clear</p>
+            <h4>
+              <span id="day">Tue</span> <span class="date">2/10/12025</span>
+            </h4>
+          </div>
+          <div class="card">
+            <img src="../assets/sunny.png" alt="" />
+            <h4 class="temp">24 ℃</h4>
+            <h3 class="one about-weather">Mostly Sunny</h3>
+            <p class="desc">Clear</p>
+            <h4>
+              <span id="day">Tue</span> <span class="date">2/10/12025</span>
+            </h4>
+          </div>
+          <div class="card">
+            <img src="../assets/sunny.png" alt="" />
+            <h4 class="temp">24 ℃</h4>
+            <h3 class="one about-weather">Mostly Sunny</h3>
+            <p class="desc">Clear</p>
+            <h4>
+              <span id="day">Tue</span> <span class="date">2/10/12025</span>
+            </h4>
+          </div>
+          <div class="card">
+            <img src="../assets/sunny.png" alt="" />
+            <h4 class="temp">24 ℃</h4>
+            <h3 class="one about-weather">Mostly Sunny</h3>
+            <p class="desc">Clear</p>
+            <h4>
+              <span id="day">Tue</span> <span class="date">2/10/12025</span>
+            </h4>
+          </div>
+          <div class="card">
+            <img src="../assets/sunny.png" alt="" />
+            <h4 class="temp">24 ℃</h4>
+            <h3 class="one about-weather">Mostly Sunny</h3>
+            <p class="desc">Clear</p>
+            <h4>
+              <span id="day">Tue</span> <span class="date">2/10/12025</span>
+            </h4>
           </div>
         </div>
       </section>
