added icons according to weather

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <div class="main">
       <div class="header-container">
         <div class="logo">
-          <img src="../assets/logo2.png" alt="logo" />
+          <img src="./assets/logo2.png" alt="logo" />
           <h1>Today's</h1>
         </div>
         <div class="time">
@@ -54,7 +54,7 @@
           <div>
             <img
               class="weather-icon"
-              src="../assets/logo2.png"
+              src="./assets/rainy-day.png"
               alt="weather_icon"
             />
             <span id="temp">24 ℃ </span>
@@ -97,7 +97,7 @@
       <section class="week-update">
         <div class="week-update-container">
           <div class="card">
-            <img src="../assets/sunny.png" alt="" />
+            <img src="./assets/sunny.png" alt="" />
             <h4 class="temp">24 ℃</h4>
             <h3 class="one about-weather">Mostly Sunny</h3>
             <p class="desc">Clear</p>
@@ -106,7 +106,7 @@
             </h4>
           </div>
           <div class="card">
-            <img src="../assets/sunny.png" alt="" />
+            <img src="./assets/sunny.png" alt="" />
             <h4 class="temp">24 ℃</h4>
             <h3 class="one about-weather">Mostly Sunny</h3>
             <p class="desc">Clear</p>
@@ -115,7 +115,7 @@
             </h4>
           </div>
           <div class="card">
-            <img src="../assets/sunny.png" alt="" />
+            <img src="./assets/sunny.png" alt="" />
             <h4 class="temp">24 ℃</h4>
             <h3 class="one about-weather">Mostly Sunny</h3>
             <p class="desc">Clear</p>
@@ -124,7 +124,7 @@
             </h4>
           </div>
           <div class="card">
-            <img src="../assets/sunny.png" alt="" />
+            <img src="./assets/sunny.png" alt="" />
             <h4 class="temp">24 ℃</h4>
             <h3 class="one about-weather">Mostly Sunny</h3>
             <p class="desc">Clear</p>
@@ -133,7 +133,7 @@
             </h4>
           </div>
           <div class="card">
-            <img src="../assets/sunny.png" alt="" />
+            <img src="./assets/sunny.png" alt="" />
             <h4 class="temp">24 ℃</h4>
             <h3 class="one about-weather">Mostly Sunny</h3>
             <p class="desc">Clear</p>
