added light and dark mode

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,11 @@
           <h2>23/4/2025</h2>
         </div>
         <div class="mode">
-          <button>night</button>
+          <select id="mode-select">
+            <option value="">Mode</option>
+            <option value="light">Light</option>
+            <option value="dark">Dark</option>
+          </select>
         </div>
       </div>
 
