--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
           <h1>Today's</h1>
         </div>
         <div class="time">
-          <h2>9:40 Am</h2>
+          <h2 id="time">9:40 Am</h2>
         </div>
         <div class="date">
-          <h2>23/4/2025</h2>
+          <h2 id="date">23/4/2025</h2>
         </div>
         <div class="mode">
           <select id="mode-select">
