--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/weather-update/dcb03df6327ce643427b.png" type="image/png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -11,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <title>weather-application</title>
-  <script defer src="/weather-update/bundle.js"></script></head>
+  <link rel="icon" href="/weather-update/rain.png"><script defer src="/weather-update/bundle.js"></script></head>
   <body>
     <div class="main">
       <div class="header-container">
