--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/weather-update/dcb03df6327ce643427b.png" type="image/png" />
+    <link rel="icon" href="/weather-forecast/dcb03df6327ce643427b.png" type="image/png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -12,12 +12,12 @@
       referrerpolicy="no-referrer"
     />
     <title>weather-application</title>
-  <link rel="icon" href="/weather-update/rain.png"><script defer src="/weather-update/bundle.js"></script></head>
+  <link rel="icon" href="/weather-forecast/rain.png"><script defer src="/weather-forecast/bundle.js"></script></head>
   <body>
     <div class="main">
       <div class="header-container">
         <div class="logo">
-          <img src="/weather-update/9985be433ec99ef1fc64.png" alt="logo" />
+          <img src="/weather-forecast/9985be433ec99ef1fc64.png" alt="logo" />
           <h1>Today's</h1>
         </div>
         <div class="time">
@@ -59,7 +59,7 @@
           <div>
             <img
               class="weather-icon"
-              src="/weather-update/7610299be6da6fba0d64.png"
+              src="/weather-forecast/7610299be6da6fba0d64.png"
               alt="weather_icon"
             />
             <span id="temp">24 ℃ </span>
@@ -102,7 +102,7 @@
       <section class="week-update">
         <div class="week-update-container">
           <div class="card">
-            <img src="/weather-update/20e7d4a7d2e24dbce16d.png" alt="" />
+            <img src="/weather-forecast/20e7d4a7d2e24dbce16d.png" alt="" />
             <h4 class="temp">24 ℃</h4>
             <h3 class="one about-weather">Mostly Sunny</h3>
             <p class="desc">Clear</p>
@@ -111,7 +111,7 @@
             </h4>
           </div>
           <div class="card">
-            <img src="/weather-update/20e7d4a7d2e24dbce16d.png" alt="" />
+            <img src="/weather-forecast/20e7d4a7d2e24dbce16d.png" alt="" />
             <h4 class="temp">24 ℃</h4>
             <h3 class="one about-weather">Mostly Sunny</h3>
             <p class="desc">Clear</p>
@@ -120,7 +120,7 @@
             </h4>
           </div>
           <div class="card">
-            <img src="/weather-update/20e7d4a7d2e24dbce16d.png" alt="" />
+            <img src="/weather-forecast/20e7d4a7d2e24dbce16d.png" alt="" />
             <h4 class="temp">24 ℃</h4>
             <h3 class="one about-weather">Mostly Sunny</h3>
             <p class="desc">Clear</p>
@@ -129,7 +129,7 @@
             </h4>
           </div>
           <div class="card">
-            <img src="/weather-update/20e7d4a7d2e24dbce16d.png" alt="" />
+            <img src="/weather-forecast/20e7d4a7d2e24dbce16d.png" alt="" />
             <h4 class="temp">24 ℃</h4>
             <h3 class="one about-weather">Mostly Sunny</h3>
             <p class="desc">Clear</p>
@@ -138,7 +138,7 @@
             </h4>
           </div>
           <div class="card">
-            <img src="/weather-update/20e7d4a7d2e24dbce16d.png" alt="" />
+            <img src="/weather-forecast/20e7d4a7d2e24dbce16d.png" alt="" />
             <h4 class="temp">24 ℃</h4>
             <h3 class="one about-weather">Mostly Sunny</h3>
             <p class="desc">Clear</p>
