change button and readme description

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
               style="font-family: Arial, FontAwesome"
               value=""
             />
-            <button id="get-weather">get weather</button>
+            <button id="get-weather">Get Weather</button>
           </div>
           <div class="search-option">
             <span><i class="fa-solid fa-location-crosshairs"></i></span>
