--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
   </head>
   <body>
     <div class="main">
+      <div class="loader hide">
+        <img src="./assets/loader.svg" alt="" />
+      </div>
       <div class="header-container">
         <div class="logo">
           <img src="./assets/logo2.png" alt="logo" />
